<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OAMMBLO</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="r_passwordLabel">Contraseña</string>
    <string name="r_userLabel">Usuario</string>
    <string name="r_loginTittleLabel">Autenticación de Twitter</string>
    <string name="r_loginButton">Login</string>
    <string name="title_activity_time_line">TimeLineActivity</string>
    <string name="r_timelineLabel">Timeline Twitter</string>
    <string name="r_tweetLabel">Tweet</string>
    <string name="r_buttonSendTweet">Enviar</string>
    <string name = "usernameHint">Digite el usuario</string>

</resources>